--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,8 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+/*This styles the <Link> tag, when rendered to the DOM it will be an <a> tag*/
+form a {
+    margin-left: 5px;
+}
