--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,4 +1,15 @@
-.imageStyle{
-  width:100px;
-  height:100px;
+.imageStyleIndex{
+  width: 160px;
+  height: 150px;
+}
+
+.imageStyleIndividual{
+  width: 300px;
+  height: 250px;
+}
+
+.blogpostBorder{
+  border: 1px solid lightgrey;
+  border-radius: 5px;
+  padding: 15px;
 }
